--- a/src/css/main_wj.css
+++ b/src/css/main_wj.css
@@ -1443,4 +1443,206 @@ button:focus {
   margin-bottom: 30px;
 }
 
+.body-synchrotest .main {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+.body-synchrotest .page-title {
+    text-indent: 30px;
+    height: 54px;
+    line-height: 54px;
+  }
+
+.body-synchrotest .grey-link {
+    color: #999;
+  }
+
+.body-synchrotest .normal-link {
+    color: #333;
+  }
+
+.body-synchrotest .synchrotest-box {
+    height: 60px;
+    line-height: 60px;
+    background: #fff;
+    -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
+            box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
+    border-radius: 8px;
+    margin: 0 auto 15px;
+  }
+
+.body-synchrotest .synchrotest-box .unit {
+      float: left;
+      font-size: 20px;
+      color: #0085E6;
+      margin-right: 16px;
+      margin-left: 30px;
+      height: 60px;
+      line-height: 60px;
+    }
+
+.body-synchrotest .synchrotest-box .changecourse {
+      float: left;
+      height: 60px;
+      line-height: 60px;
+      color: #6DBBF4;
+      font-size: 14px;
+    }
+
+.body-synchrotest .synchrotest-box .change-icon {
+      display: inline-block;
+      width: 19px;
+      height: 15px;
+      background: url('../img/course-reset.png') no-repeat;
+      background-size: cover;
+      margin-right: 5px;
+      position: relative;
+      top: 3px;
+    }
+
+.body-synchrotest .synchrotest-box .return-coursecenter {
+      float: right;
+      margin-right: 30px;
+      font-size: 14px;
+      color: #0085E6;
+    }
+
+.body-synchrotest .synchrotest-wp {
+    border-radius: 8px;
+    overflow: hidden;
+    width: 1200px;
+    background: #fff;
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+  }
+
+.body-synchrotest .synchrotest-wp .title {
+      height: 50px;
+      line-height: 50px;
+      color: #fff;
+      font-size: 20px;
+      text-indent: 30px;
+      background: #0085E6;
+    }
+
+.body-synchrotest .synchrotest-wp .unit-txt {
+      font-size: 14px;
+      color: #666;
+      display: inline-block;
+      width: 300px;
+      text-align: center;
+    }
+
+.body-synchrotest .synchrotest-wp .history-fa {
+      display: inline-block;
+      width: 300px;
+      text-align: center;
+    }
+
+.body-synchrotest .synchrotest-wp .history {
+      font-size: 14px;
+      color: #666;
+    }
+
+.body-synchrotest .synchrotest-wp .answer-fa {
+      display: inline-block;
+      width: 290px;
+      text-align: center;
+    }
+
+.body-synchrotest .synchrotest-wp .pass {
+      display: inline-block;
+      width: 300px;
+      text-align: center;
+      font-size: 14px;
+      color: #33CBB4;
+    }
+
+.body-synchrotest .synchrotest-wp .notpass {
+      display: inline-block;
+      width: 300px;
+      text-align: center;
+      font-size: 14px;
+      color: #FF4548;
+    }
+
+.body-synchrotest .synchrotest-wp .answer-again {
+      display: inline-block;
+      text-align: center;
+      font-size: 14px;
+      color: #fff;
+      width: 80px;
+      height: 26px;
+      line-height: 26px;
+      background: #0085E6;
+      border-radius: 13px;
+    }
+
+.body-synchrotest .synchrotest-wp li {
+      height: 50px;
+      line-height: 50px;
+    }
+
+.body-synchrotest .synchrotest-ul li:nth-of-type(odd) {
+  background: #FAFAFB;
+}
+
+.body-synchrotest .synchrotest-ul li:nth-of-type(even) {
+  background: #fff;
+}
+
+.bomb-wp {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, .5);
+  top: 0;
+  left: 0;
+}
+
+.bomb-wp .bomb-ct {
+    width: 1000px;
+    height: 289px;
+    background: #fff;
+    -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
+            box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
+    border-radius: 8px;
+    margin: 0 auto;
+    position: relative;
+    top: 50%;
+    margin-top: -180px;
+  }
+
+.bomb-wp .bomb-title {
+    font-size: 16px;
+    color: #333;
+    text-indent: 58px;
+    padding-top: 19px;
+    margin-bottom: 49px;
+  }
+
+.bomb-wp .delete-icon {
+    position: absolute;
+    width: 19px;
+    height: 19px;
+    cursor: pointer;
+    background: url('../img/delete_icon.png') no-repeat;
+    background-size: cover;
+    top: 19px;
+    right: 30px;
+  }
+
+.bomb-wp .link-wp a {
+      display: inline-block;
+      width: 294px;
+      height: 169px;
+      margin-right: 17px;
+      border: 1px solid red
+    }
+
+.bomb-wp .link-wp a:first-of-type {
+  margin-left: 40px;
+}
+
 /* stylelint-enable */
