--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -16,7 +16,51 @@
     padding: 5px;
     color: #999;
   }
-
+.xc-score {
+  text-align: center;
+}
+.xc-score .xc-score-des {
+    margin: 22px 0 30px 0;
+    line-height: 20px;
+    color: #666;
+  }
+.xc-score .xc-score-body {
+    display: inline-block;
+  }
+.xc-score .xc-score-body .xc-score-img {
+      width: 258px;
+      float: left;
+    }
+.xc-score .xc-score-body .xc-score-box {
+      display: inline-block;
+      text-align: left;
+      margin-left: 5px;
+    }
+.xc-score .xc-score-body .xc-score-title {
+      color: #333;
+      font-size: 20px;
+      line-height: 28px;
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+    }
+.xc-score .xc-score-body .xc-score-tip {
+      font-size: 14px;
+      color: #999999;
+      display: inline-block;
+      line-height: 20px;
+    }
+.xc-score .xc-score-body .xc-score-number {
+      font-size: 14px;
+      color: #333;
+      margin-top: 10px;
+    }
+.xc-score .xc-score-body .xc-score-number .xc-score-num {
+        font-size: 30px;
+        line-height: 42px;
+        color: #FF4548;
+        margin-left: 5px;
+      }
 .xc-head {
   font-size: 14px;
   padding: 16px 30px;
@@ -27,26 +71,22 @@
   border-radius: 8px;
   color: #999;
 }
-
 .xc-head .xc-head-top {
     overflow: hidden;
     line-height: 36px;
   }
-
 .xc-head .xc-head-top .xc-head-name {
       color: #0085e6;
       font-size: 20px;
       font-weight: bold;
       float: left;
     }
-
 .xc-head .xc-head-top .xc-head-unit {
       float: left;
       margin-left: 30px;
       padding-left: 30px;
       border-left: 1px solid rgba(235, 235, 235, 1);
     }
-
 .xc-head .xc-head-top .xc-head-unit .xc-head-select {
         display: inline-block;
         line-height: 34px;
@@ -58,14 +98,12 @@
         position: relative;
         cursor: pointer;
       }
-
 .xc-head .xc-head-top .xc-head-unit .xc-head-select .xc-head-selectImg {
           position: absolute;
           right: 10px;
           top: 13px;
           width: 12px;
         }
-
 .xc-head .xc-head-top .return {
       float: right;
       display: inline-block;
@@ -73,20 +111,16 @@
       border-left: rgba(235, 235, 235, 1) 1px solid;
       color: #0085e6;
     }
-
 .xc-head .xc-head-bottom {
     overflow: hidden;
     margin-top: 15px;
   }
-
 .xc-head .xc-head-bottom .xc-head-categories {
       line-height: 20px;
     }
-
 .xc-head .xc-head-bottom .xc-head-categories .xc-head-category {
         float: left;
       }
-
 .xc-head .xc-head-bottom .xc-head-categories .circle {
         vertical-align: top;
         display: inline-block;
@@ -98,13 +132,11 @@
         margin-top: 1px;
         cursor: pointer
       }
-
 .xc-head .xc-head-bottom .xc-head-categories .circle.active {
   border-color: #0085e6;
   background-color: #0085e6;
   position: relative;
 }
-
 .xc-head .xc-head-bottom .xc-head-categories .circle.active::after {
   content: "";
   display: inline-block;
@@ -119,17 +151,109 @@
   z-index: 111;
   background-color: #fff;
 }
-
 .xc-head .xc-head-bottom .xc-head-categories .number {
         color: #333;
         margin: 0 20px 0 5px;
         font-weight: 600
       }
-
 .xc-head .xc-head-bottom .xc-head-categories .number.per {
   color: #0085e6;
 }
-
+.xc-coustom-pent {
+  width: 100%;
+  border: 1px solid rgba(235, 235, 235, 1);
+  border-radius: 4px;
+}
+.xc-coustom-pent .coustom-pent-head {
+    line-height: 40px;
+    color: #666;
+    background-color: #f5f5f5;
+    padding-left: 30px;
+  }
+.xc-coustom-pent .coustom-pent-head .num {
+      margin-right: 6px;
+      color: #333;
+    }
+.xc-coustom-pent .coustom-pent-head .img {
+      width: 30px;
+      height: 30px;
+      vertical-align: top;
+      margin-top: 5px;
+      margin-right: 5px;
+    }
+.xc-coustom-pent .coustom-pent-body {
+    padding: 30px;
+  }
+.xc-coustom-pent .coustom-pent-body .coustom-label .label {
+        cursor: pointer;
+        padding-left: 25px;
+        font-size: 14px;
+        line-height: 20px;
+        display: block;
+        position: relative
+      }
+.xc-coustom-pent .coustom-pent-body .coustom-label .label::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0;
+  border-radius: 50%;
+  border: 1px solid rgba(215, 215, 215, 1);
+  background-color: rgba(250, 250, 251, 1);
+}
+.xc-coustom-pent .coustom-pent-body .coustom-label .label.active::after {
+  border-color: #0085e6;
+  background-color: #0085e6;
+}
+.xc-coustom-pent .coustom-pent-body .coustom-label .label.active::before {
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #fff;
+  left: 6px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 100;
+}
+.xc-coustom-pent .coustom-pent-body .coustom-label .label .radio-input {
+          display: none;
+}
+.xc-coustom-pent .coustom-pent-body .coustom-label .label.true {
+  color: #33CBB4;
+}
+.xc-coustom-pent .coustom-pent-body .coustom-label .label .label-true-img {
+          width: 20px;
+          height: 20px;
+          margin-left: 5px;
+}
+.xc-coustom-pent .coustom-pent-body .coustom-label .write-input {
+        width: 100%;
+        line-height: 36px;
+        height: 36px;
+        border-radius: 18px;
+        border: 1px solid rgba(215, 215, 215, 1);
+        outline: none;
+        text-indent: 15px;
+        font-size: 14px;
+        color: #333333
+      }
+.xc-coustom-pent .coustom-pent-body .coustom-label .write-input.active {
+  border-color: #0085e6;
+}
+.xc-coustom-pent .coustom-pent-body .coustom-label .write-input .error {
+          color: #FF4548;
+}
+.xc-coustom-pent + .xc-coustom-pent {
+  margin-top: 15px;
+}
 .xc-pent {
   background: rgba(255, 255, 255, 1);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
@@ -138,7 +262,6 @@
   border-radius: 8px;
   overflow: hidden;
 }
-
 .xc-pent .pent-head {
     font-size: 14px;
     color: rgba(255, 255, 255, 1);
@@ -147,7 +270,6 @@
     background-color: #0085e6;
     overflow: hidden;
   }
-
 .xc-pent .pent-head .pent-name {
       float: left;
       font-size: 20px;
@@ -155,21 +277,38 @@
       padding-right: 30px;
       border-right: 1px solid rgba(88, 176, 241, 1);
     }
-
+.xc-pent .pent-head .coustom-item {
+      font-size: 20px;
+      font-weight: 600;
+      color: #fff;
+      display: inline-block;
+      margin-right: 25px;
+      position: relative
+    }
+.xc-pent .pent-head .coustom-item + .coustom-item {
+  margin-left: 25px;
+}
+.xc-pent .pent-head .coustom-item + .coustom-item::before {
+  content: '';
+  position: absolute;
+  width: 1px;
+  height: 30px;
+  background-color: rgba(88, 176, 241, 1);
+  display: inline-block;
+  left: -25px;
+  top: -1px;
+}
 .xc-pent .pent-head .pent-name-small {
       float: left;
       padding-left: 30px;
     }
-
 .xc-pent .pent-head .pent-close {
       width: 28px;
       float: right;
       cursor: pointer;
     }
-
 .xc-pent .pent-body {
     padding: 30px;
-    min-height: 573px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
   }
@@ -1004,3 +1143,64 @@
             margin-left: 0;
             margin-right: 5px;
           }
+.xc-review {
+  color: #33CBB4;
+  font-size: 16px;
+  margin-top: -10px;
+  margin-bottom: 20px
+}
+.xc-review.error {
+  color: #FF4548;
+}
+.xc-review-img {
+  width: 26px;
+  height: 26px;
+  vertical-align: top;
+  margin-top: 9px;
+  margin-right: 5px;
+}
+.xc-coustom-footer {
+  line-height: 64px;
+  height: 64px;
+  background-color: rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, .05);
+          box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, .05);
+}
+.xc-coustom-footer .coustom-footer-btn {
+    float: right;
+    text-align: center;
+    width: 148px;
+    background-color: #0085e6;
+    font-size: 20px;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+  }
+.xc-coustom-footer .coustom-footer-return {
+    cursor: pointer;
+    padding: 0 30px;
+    float: right;
+  }
+.xc-coustom-footer .coustom-footer-return .return {
+      color: #666;
+      font-size: 20px;
+    }
+.xc-coustom-footer .coustom-footer-time {
+    float: right;
+    color: #999;
+  }
+.xc-coustom-footer .coustom-footer-time .timeImg {
+      width: 20px;
+      height: 20px;
+      margin: 22px 5px 0 0;
+      vertical-align: top;
+    }
+.xc-coustom-footer .coustom-footer-time .time {
+      font-size: 30px;
+      color: #333;
+      display: inline-block;
+      line-height: 42px;
+      vertical-align: top;
+      margin-top: 11px;
+      margin-left: 5px;
+    }
