--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -16,7 +16,51 @@
     color: #999;
   }
 }
-
+.xc-score {
+  text-align: center;
+  .xc-score-des {
+    margin: 22px 0 30px 0;
+    line-height: 20px;
+    color: #666;
+  }
+  .xc-score-body {
+    display: inline-block;
+    .xc-score-img {
+      width: 258px;
+      float: left;
+    }
+    .xc-score-box {
+      display: inline-block;
+      text-align: left;
+      margin-left: 5px;
+    }
+    .xc-score-title {
+      color: #333;
+      font-size: 20px;
+      line-height: 28px;
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+    }
+    .xc-score-tip {
+      font-size: 14px;
+      color: #999999;
+      display: inline-block;
+      line-height: 20px;
+    }
+    .xc-score-number {
+      font-size: 14px;
+      color: #333;
+      .xc-score-num {
+        font-size: 30px;
+        line-height: 42px;
+        color: #FF4548;
+        margin-left: 5px;
+      }
+      margin-top: 10px;
+    }
+  }
+}
 .xc-head {
   font-size: 14px;
   padding: 16px 30px;
@@ -127,7 +171,101 @@
     }
   }
 }
-
+.xc-coustom-pent {
+  width: 100%;
+  border: 1px solid rgba(235, 235, 235, 1);
+  border-radius: 4px;
+  .coustom-pent-head {
+    line-height: 40px;
+    color: #666;
+    background-color: #f5f5f5;
+    padding-left: 30px;
+    .num {
+      margin-right: 6px;
+      color: #333;
+    }
+    .img {
+      width: 30px;
+      height: 30px;
+      vertical-align: top;
+      margin-top: 5px;
+      margin-right: 5px;
+    }
+  }
+  .coustom-pent-body {
+    padding: 30px;
+    .coustom-label {
+      .label {
+        cursor: pointer;
+        padding-left: 25px;
+        font-size: 14px;
+        line-height: 20px;
+        display: block;
+        position: relative;
+        &::after {
+          content: '';
+          display: inline-block;
+          position: absolute;
+          width: 14px;
+          height: 14px;
+          top: 50%;
+          transform: translateY(-50%);
+          left: 0;
+          border-radius: 50%;
+          border: 1px solid rgba(215, 215, 215, 1);
+          background-color: rgba(250, 250, 251, 1);
+        }
+        &.active::after {
+          border-color: #0085e6;
+          background-color: #0085e6;
+        }
+        &.active::before {
+          content: '';
+          position: absolute;
+          width: 4px;
+          height: 4px;
+          border-radius: 50%;
+          background-color: #fff;
+          left: 6px;
+          top: 50%;
+          transform: translateY(-50%);
+          z-index: 100;
+        }
+        .radio-input {
+          display: none;
+        }
+        &.true {
+          color: #33CBB4;
+        }
+        .label-true-img {
+          width: 20px;
+          height: 20px;
+          margin-left: 5px;
+        }
+      }
+      .write-input {
+        width: 100%;
+        line-height: 36px;
+        height: 36px;
+        border-radius: 18px;
+        border: 1px solid rgba(215, 215, 215, 1);
+        outline: none;
+        text-indent: 15px;
+        font-size: 14px;
+        color: #333333;
+        &.active {
+          border-color: #0085e6;
+        }
+        .error {
+          color: #FF4548;
+        }
+      }
+    }
+  }
+  & + .xc-coustom-pent {
+    margin-top: 15px;
+  }
+}
 .xc-pent {
   background: rgba(255, 255, 255, 1);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
@@ -150,7 +288,27 @@
       padding-right: 30px;
       border-right: 1px solid rgba(88, 176, 241, 1);
     }
-
+    .coustom-item {
+      font-size: 20px;
+      font-weight: 600;
+      color: #fff;
+      display: inline-block;
+      margin-right: 25px;
+      position: relative;
+      & + .coustom-item {
+        margin-left: 25px;
+        &::before {
+          content: '';
+          position: absolute;
+          width: 1px;
+          height: 30px;
+          background-color: rgba(88, 176, 241, 1);
+          display: inline-block;
+          left: -25px;
+          top: -1px;
+        }
+      }
+    }
     .pent-name-small {
       float: left;
       padding-left: 30px;
@@ -165,7 +323,6 @@
 
   .pent-body {
     padding: 30px;
-    min-height: 573px;
     box-sizing: border-box;
   }
 }
@@ -997,6 +1154,66 @@
           }
         }
       }
+    }
+  }
+}
+.xc-review {
+  color: #33CBB4;
+  font-size: 16px;
+  margin-top: -10px;
+  margin-bottom: 20px;
+  &.error {
+    color: #FF4548;
+  }
+}
+.xc-review-img {
+  width: 26px;
+  height: 26px;
+  vertical-align: top;
+  margin-top: 9px;
+  margin-right: 5px;
+}
+.xc-coustom-footer {
+  line-height: 64px;
+  height: 64px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.05);
+  .coustom-footer-btn {
+    float: right;
+    text-align: center;
+    width: 148px;
+    background-color: #0085e6;
+    font-size: 20px;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  .coustom-footer-return {
+    cursor: pointer;
+    padding: 0 30px;
+    float: right;
+    .return {
+      color: #666;
+      font-size: 20px;
+    }
+  }
+  .coustom-footer-time {
+    float: right;
+    color: #999;
+    .timeImg {
+      width: 20px;
+      height: 20px;
+      margin: 22px 5px 0 0;
+      vertical-align: top;
+    }
+    .time {
+      font-size: 30px;
+      color: #333;
+      display: inline-block;
+      line-height: 42px;
+      vertical-align: top;
+      margin-top: 11px;
+      margin-left: 5px;
     }
   }
 }
