--- a/src/css/theme-e.css
+++ b/src/css/theme-e.css
@@ -6,7 +6,7 @@ body,
   background-color: #f5f7fa;
 }
 .wrapper > .aside {
-  background-color: #ffffff;
+  background-color: #3a3f51;
 }
 /* ========================================================================
    Component: top-navbar
@@ -16,11 +16,11 @@ body,
 }
 .topnavbar .navbar-header {
   background-color: transparent;
-  background-image: -webkit-linear-gradient(left, #f05050 0%, #f47f7f 100%);
-  background-image: -o-linear-gradient(left, #f05050 0%, #f47f7f 100%);
-  background-image: linear-gradient(to right, #f05050 0%, #f47f7f 100%);
+  background-image: -webkit-linear-gradient(left, #2B3845 0%, #2B3845 100%);
+  background-image: -o-linear-gradient(left, #2B3845 0%, #2B3845 100%);
+  background-image: linear-gradient(to right, #2B3845 0%, #2B3845 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff05050', endColorstr='#fff47f7f', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1797be', endColorstr='#ff23b7e5', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar .navbar-header {
@@ -29,13 +29,13 @@ body,
 }
 .topnavbar .navbar-nav > li > a,
 .topnavbar .navbar-nav > .open > a {
-  color: #f05050;
+  color: #2B3845;
 }
 .topnavbar .navbar-nav > li > a:hover,
 .topnavbar .navbar-nav > .open > a:hover,
 .topnavbar .navbar-nav > li > a:focus,
 .topnavbar .navbar-nav > .open > a:focus {
-  color: #c91111;
+  color: #0c4f63;
 }
 .topnavbar .navbar-nav > .active > a,
 .topnavbar .navbar-nav > .open > a,
@@ -49,21 +49,21 @@ body,
   color: #ffffff;
 }
 .topnavbar .nav-wrapper {
-  background-color: #f05050;
-  background-image: -webkit-linear-gradient(left, #f05050 0%, #f47f7f 100%);
-  background-image: -o-linear-gradient(left, #f05050 0%, #f47f7f 100%);
-  background-image: linear-gradient(to right, #f05050 0%, #f47f7f 100%);
+  background-color: #2B3845;
+  background-image: -webkit-linear-gradient(left, #2B3845 0%, #2B3845 100%);
+  background-image: -o-linear-gradient(left, #2B3845 0%, #2B3845 100%);
+  background-image: linear-gradient(to right, #2B3845 0%, #2B3845 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff05050', endColorstr='#fff47f7f', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1797be', endColorstr='#ff23b7e5', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar {
-    background-color: #f05050;
-    background-image: -webkit-linear-gradient(left, #f05050 0%, #f47f7f 100%);
-    background-image: -o-linear-gradient(left, #f05050 0%, #f47f7f 100%);
-    background-image: linear-gradient(to right, #f05050 0%, #f47f7f 100%);
+    background-color: #2B3845;
+    background-image: -webkit-linear-gradient(left, #2B3845 0%, #2B3845 100%);
+    background-image: -o-linear-gradient(left, #2B3845 0%, #2B3845 100%);
+    background-image: linear-gradient(to right, #2B3845 0%, #2B3845 100%);
     background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff05050', endColorstr='#fff47f7f', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1797be', endColorstr='#ff23b7e5', GradientType=1);
   }
   .topnavbar .navbar-nav > .open > a,
   .topnavbar .navbar-nav > .open > a:hover,
@@ -78,27 +78,27 @@ body,
   .topnavbar .navbar-nav > .open > a:hover,
   .topnavbar .navbar-nav > li > a:focus,
   .topnavbar .navbar-nav > .open > a:focus {
-    color: #c91111;
+    color: #0085E6;
   }
 }
 /* ========================================================================
    Component: sidebar
  ========================================================================== */
 .sidebar {
-  background-color: #ffffff;
+  background-color: #3a3f51;
 }
 .sidebar .nav-heading {
   color: #919da8;
 }
 .sidebar .nav > li > a,
 .sidebar .nav > li > .nav-item {
-  color: #515253;
+  color: #e1e2e3;
 }
 .sidebar .nav > li > a:focus,
 .sidebar .nav > li > .nav-item:focus,
 .sidebar .nav > li > a:hover,
 .sidebar .nav > li > .nav-item:hover {
-  color: #f05050;
+  color: #0085E6;
 }
 .sidebar .nav > li > a > em,
 .sidebar .nav > li > .nav-item > em {
@@ -110,40 +110,40 @@ body,
 .sidebar .nav > li.open > a,
 .sidebar .nav > li.active .nav,
 .sidebar .nav > li.open .nav {
-  background-color: #fcfcfc;
-  color: #f05050;
+  background-color: #383d4e;
+  color: #0085E6;
 }
 .sidebar .nav > li.active > a > em,
 .sidebar .nav > li.open > a > em {
-  color: #f05050;
+  color: #0085E6;
 }
 .sidebar .nav > li.active {
-  border-left-color: #f05050;
+  border-left-color: #2B3845;
 }
 .sidebar-subnav {
-  background-color: #ffffff;
+  background-color: #3a3f51;
 }
 .sidebar-subnav > .sidebar-subnav-header {
-  color: #515253;
+  color: #e1e2e3;
 }
 .sidebar-subnav > li > a,
 .sidebar-subnav > li > .nav-item {
-  color: #515253;
+  color: #e1e2e3;
 }
 .sidebar-subnav > li > a:focus,
 .sidebar-subnav > li > .nav-item:focus,
 .sidebar-subnav > li > a:hover,
 .sidebar-subnav > li > .nav-item:hover {
-  color: #f05050;
+  color: #0085E6;
 }
 .sidebar-subnav > li.active > a,
 .sidebar-subnav > li.active > .nav-item {
-  color: #f05050;
+  color: #0085E6;
 }
 .sidebar-subnav > li.active > a:after,
 .sidebar-subnav > li.active > .nav-item:after {
-  border-color: #f05050;
-  background-color: #f05050;
+  border-color: #2B3845;
+  background-color: #2B3845;
 }
 /* ========================================================================
    Component: offsidebar
