29pages and imgs

--- a/src/less/main_linye.less
+++ b/src/less/main_linye.less
@@ -41,6 +41,12 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+.linye-finish *{
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 .linye-ranking-points span{
   display: inline-block;
@@ -1297,6 +1303,272 @@ line-height:20px;
   width: 256px;
   height: 141px;
 }
+
+/*029搞定语法*/
+
+.linye-finish .data-title{
+  padding: 20px 0 14px 32px;
+  font-size:14px;
+  color:#999;
+  line-height:20px;
+}
+
+.linye-finish .data-title span{
+  color: #333;
+}
+
+.linye-finish .wrap {
+  background: #fafafb;
+}
+
+.linye-finish body {
+  background: #fafafb;
+}
+.linye-finish .head{
+  width:1200px;
+  height:60px;
+  background:rgba(255,255,255,1);
+  box-shadow:0px 4px 8px 0px rgba(0,0,0,0.05);
+  border-radius:8px;
+  display: flex;
+  align-items: center;
+  padding: 0 30px;
+}
+.linye-finish .book-name{
+  font-size:20px;
+font-family:PingFangSC-Semibold;
+color:rgba(0,133,230,1);
+line-height:28px;
+margin-right: 16px;
+}
+.linye-finish .reflash-icon{
+  width: 19px;
+  height: 15px;
+  margin-right: 5px;
+  flex-shrink: 0;
+}
+.linye-finish .reflesh-title{
+  font-size:14px;
+  color:rgba(109,187,244,1);
+  line-height:20px;
+  flex-grow: 1;
+}
+.linye-finish .back{
+  font-size:14px;
+font-family:PingFangSC-Regular;
+color:rgba(0,133,230,1);
+line-height:20px;
+text-align: right;
+}
+.linye-finish .content{
+  width: 100;
+  height: 650px;
+  background:rgba(255,255,255,1);
+  box-shadow:0px 4px 8px 0px rgba(0,0,0,0.05);
+  border-radius:8px;
+  margin-top: 15px;
+}
+.linye-finish .certificate-head{
+  width:100%;
+  height:50px;
+  background:rgba(0,133,230,1);
+  border-radius:8px 8px 0px 0px;
+  display: flex;
+  align-items: center;
+  font-size:14px;
+  color:rgba(255,255,255,1);
+  line-height:20px;
+}
+.linye-finish .table-hd1{
+  width: 280px;
+  text-align: center;
+}
+.linye-finish .table-hd2{
+  width: 920px;
+  text-align: center;
+}
+.linye-finish .content-body{
+  display: flex;
+}
+.linye-finish .class-type{
+  height: 600px;
+  overflow-x: hidden; overflow-y: auto;
+  width: 280px;
+}
+
+.linye-finish .class-type-item29{
+  width: 100%;
+  height: 50px;
+  padding: 0 30px;
+  line-height: 46px;
+  font-size:14px;
+  color:rgba(102,102,102,1);
+  border-right: 1px solid rgba(235,235,235,1);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.linye-finish .singular{
+  background: #fff;
+}
+.linye-finish .even{
+  background: #FBFBFB;
+}
+.linye-finish .class-type1{
+  flex-grow: 1;
+  font-size:14px;
+  font-family:PingFangSC-Regular;
+  color:rgba(102,102,102,1);
+  line-height:20px;
+  vertical-align: middle;
+
+}
+.linye-finish .class-type1 span{
+  display: inline-block;
+  width: 112px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color:rgba(153,153,153,1);
+  vertical-align: middle;
+}
+.linye-finish .circle1{
+  width:18px;
+  height:18px;
+  background:rgba(0,133,230,1);
+  margin-right: 16px;
+  position: relative;
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.linye-finish .circle2{
+  width:18px;
+  height:18px;
+  background:rgba(51,203,180,1);
+  position: relative;
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.linye-finish .circle1-none{
+  background: #fff;
+  border:2px solid rgba(0,133,230,1);
+}
+.linye-finish .circle2-none{
+  background: #fff;
+  border:2px solid rgba(51,203,180,1);
+}
+.linye-finish .circle1-running{
+  width:18px;
+  height:18px;
+  background: #fff;
+}
+.linye-finish .circle1-running::before{
+  content: " ";
+  width: 100%;
+  height: 50%;
+  background: rgba(0,133,230,1);
+  border-radius: 0 0 18px 18px ;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.linye-finish .circle1-running::after{
+  content: " ";
+  width: 100%;
+  height: 50%;
+  background: rgba(0,133,230,1);
+  border-radius: 0 0 18px 18px ;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+   transform: rotate(120deg);
+   transform-origin: center top;
+}
+.linye-finish .circle2-running{
+  width:18px;
+  height:18px;
+  background: #fff;
+}
+.linye-finish .circle2-running::before{
+  content: " ";
+  width: 100%;
+  height: 50%;
+  background:rgba(51,203,180,1);
+  border-radius: 0 0 18px 18px ;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.linye-finish .circle2-running::after{
+  content: " ";
+  width: 100%;
+  height: 50%;
+  background:rgba(51,203,180,1);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+   transform: rotate(120deg);
+   transform-origin: center top;
+   border-radius: 0 0 18px 18px ;
+}
+.linye-finish .content-right{
+  text-align: center;
+  padding-top: 120px;
+  width: 920px;
+}
+.linye-finish .reword-list{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+}
+.linye-finish .reword-litem{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 82px;
+}
+.linye-finish .reword-icon{
+  width: 88px;
+  height: 88px;
+
+}
+.linye-finish .reword-tip1{
+  font-size:16px;
+color:rgba(51,51,51,1);
+line-height:22px;
+margin-top: 10px;
+}
+.linye-finish .reword-tip2{
+  font-size:14px;
+font-family:PingFangSC-Regular;
+color:rgba(153,153,153,1);
+line-height:20px;
+margin-top: 2px;
+font-weight: bold;
+}
+.linye-finish .reword-tip2 span{
+  color: #0085E6;
+
+}
+.linye-finish .reword-tip3{
+  width:86px;
+height:30px;
+background:rgba(0,133,230,1);
+border-radius:15px;
+text-align: center;
+font-size:14px;
+color:rgba(255,255,255,1);
+line-height:20px;
+margin-top: 5px;
+}
+.linye-finish .content-right-img1{
+  margin-top: 64px;
+  width: 543px;
+  height: 233px;
+}
+
 
 
 
