--- a/src/less/main_linye.less
+++ b/src/less/main_linye.less
@@ -163,7 +163,7 @@ li {
   width: 1200px;
   height: 202px;
   position: relative;
-  background: url('../img/05/Rectangle 3@2x.png') no-repeat;
+  background: url('../img/05/rectangle32x.png') no-repeat;
   background-size:100% 100%;
   margin-top: 15px;
   display: flex;
@@ -834,7 +834,7 @@ li, {
   right: 20px;
   top: 50%;
   transform: translate(0,-50%);
-  background: url(../img/07/Rectangle19@2x.png) no-repeat;
+  background: url(../img/07/rectangle192x.png) no-repeat;
   background-size:100% auto;
   width: 11px;
   height: 6px; 
@@ -947,7 +947,7 @@ li, {
 }
 
 .linye-change-password .progress-item-finish{
-  background: url(../img/07/Group@2x.png) no-repeat;
+  background: url(../img/07/group2x.png) no-repeat;
   background-size:100% 100%; 
 }
 
@@ -1650,13 +1650,13 @@ margin-left: 30px;
   width: 34px;
   height: 34px;
   margin-right: 4px;
-  background: url(../img/30/Rectangle@2x.png) no-repeat;
+  background: url(../img/30/rectangle2x.png) no-repeat;
   background-size: 100% auto;
   flex-shrink: 0;
   
 }
 .linye-learn .list-img-checked{
-  background: url(../img/30/Rectangle1@2x.png) no-repeat;
+  background: url(../img/30/rectangle12x.png) no-repeat;
   background-size: 100% auto;
 
 }
