--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 .xc-brand {
   font-size: 14px;
   line-height: 20px;
@@ -94,6 +93,7 @@
 }
 .xc-table-box{
   min-height: 600px;
+  margin-bottom: 50px;
 }
 .coustom-body {
   background-color: rgba(255, 255, 255, 1);
@@ -895,6 +895,11 @@
                     border: 1px solid rgba(215, 215, 215, 1);
                     background: rgba(250, 250, 251, 1);
                   }
+                  &.active::before {
+                    border-color: #0085E6;
+                    background: #0085E6 url('../img/word_right.png') no-repeat center center;
+                    background-size: 15px auto;
+                  }
                 }
               }
             }
@@ -1252,9 +1257,9 @@
 
   .readText-footer-items {
     float: left;
-    width: 108px;
+    min-width: 108px;
     line-height: 20px;
-    padding: 0 0 10px 20px;
+    padding: 10px 0 10px 20px;
     font-size: 14px;
 
     .time {
@@ -1478,7 +1483,7 @@
         border-radius: 3px;
         background-color: #0085e6;
         cursor: pointer;
-        transition: all linear 0.2s;
+        display: none;
       }
       .intelText-class {
         display: inline-block;
@@ -2045,6 +2050,21 @@
     }
     & + .xc-readCom-correct {
       margin-top: 10px;
+    }
+  }
+}
+.xc-html {
+  height: 100%;
+  .xc-body {
+    height: 100%;
+    .wrap {
+      min-height: calc(100% - 300px);
+      &.ml {
+        min-height: calc(100% - 144px);
+      }
+      &.mt {
+        min-height: calc(100% - 160px);
+      }
     }
   }
 }
