--- a/src/less/main_linye.less
+++ b/src/less/main_linye.less
@@ -14,7 +14,10 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
+.linye-ranking-points .footer {
+  padding-top: 54px;
+  padding-bottom: 50px;
+}
 .linye-shopping * {
   margin: 0;
   padding: 0;
