--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -1105,7 +1105,8 @@
 
   .readText-sentence {
     font-weight: 200;
-    padding: 170px 0 0 120px;
+    width: 380px;
+    margin: 170px auto 120px;
 
     .readText-listen {
       font-size: 14px;
@@ -1404,6 +1405,7 @@
 .xc-coustom-footer {
   line-height: 64px;
   height: 64px;
+  overflow: hidden;
   background-color: rgba(255, 255, 255, 1);
   box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.05);
   .coustom-footer-btn {
