--- a/src/css/main_wj.css
+++ b/src/css/main_wj.css
@@ -44,6 +44,10 @@ button:focus {
     margin-left: 16px;
   }
 
+.body-login input:focus, .body-register input:focus {
+  outline: none;
+}
+
 .body-login .none, .body-register .none {
     display: none;
   }
@@ -209,6 +213,7 @@ button:focus {
 
 .body-myclass .wrap {
     background: #fafafb;
+    padding-top: 26px;
   }
 
 .body-myclass .head-wp {
@@ -1184,7 +1189,8 @@ button:focus {
       width: 370px;
       height: 36px;
       font-size: 14px;
-      color: #999
+      color: #999;
+      border: 1px solid #D7D7D7
     }
 
 .body-readsetene .perview-left .en-ipt:focus {
@@ -1663,5 +1669,42 @@ button:focus {
   background: url('../img/link1.png') no-repeat;
   background-size: cover;
 }
+
+.fixedfoot-wp {
+  width: 100%;
+  height: 64px;
+  background: #fff;
+  -webkit-box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, .05);
+          box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, .05);
+  height: 64px;
+  line-height: 64px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+.fixedfoot-wp .fixedfoot-ct {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+.fixedfoot-wp .submit-btn {
+    float: right;
+    color: #fff;
+    font-size: 20px;
+    width: 148px;
+    height: 64px;
+    line-height: 64px;
+    text-align: center;
+    background: #0085E6;
+    margin-left: 40px;
+  }
+
+.fixedfoot-wp .returnback {
+    float: right;
+    color: #666666;
+    font-size: 20px;
+    margin-left: 50px;
+  }
 
 /* stylelint-enable */
