--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@
 
 .wrap {
   width: 100%;
-  min-height: 100%;
+  min-height: 650px;
   margin: 0 auto;
   font-family: "微软雅黑", "宋体", Arial, Helvetica, sans-serif;
   overflow: hidden;
