--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -23,6 +23,7 @@ button {
 }
 
 .register-body {
+
   .login-ipt-small {
     width: 180px;
     height: 46px;
@@ -48,6 +49,12 @@ button {
 
 .body-login,
 .body-register {
+  input {
+    &:focus {
+      outline: none;
+    }
+  }
+
   .none {
     display: none;
   }
@@ -211,6 +218,7 @@ button {
 .body-myclass {
   .wrap {
     background: #fafafb;
+    padding-top: 26px;
   }
 
   .head-wp {
@@ -1203,6 +1211,7 @@ button {
       height: 36px;
       font-size: 14px;
       color: #999;
+      border: 1px solid #D7D7D7;
 
       &:focus {
         outline: none;
@@ -1687,6 +1696,42 @@ button {
         background-size: cover;
       }
     }
+  }
+}
+
+.fixedfoot-wp {
+  width: 100%;
+  height: 64px;
+  background: #fff;
+  box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.05);
+  height: 64px;
+  line-height: 64px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+
+  .fixedfoot-ct {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .submit-btn {
+    float: right;
+    color: #fff;
+    font-size: 20px;
+    width: 148px;
+    height: 64px;
+    line-height: 64px;
+    text-align: center;
+    background: #0085E6;
+    margin-left: 40px;
+  }
+
+  .returnback {
+    float: right;
+    color: #666666;
+    font-size: 20px;
+    margin-left: 50px;
   }
 }
 
