--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -1130,6 +1130,31 @@ button {
       color: #666;
     }
   }
+
+  .result-icon {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    margin-right: 8px;
+    vertical-align: middle;
+  }
+
+  .result-right-icon {
+    background: url('../img/right_icon.png') no-repeat;
+    background-size: cover;
+  }
+
+  .result-fail-icon {
+    background: url('../img/fail_icon.png') no-repeat;
+    background-size: cover;
+  }
+
+  .q-explain {
+    font-size: 14px;
+    color: #999999;
+    text-indent: 30px;
+    padding-top: 20px;
+  }
 }
 
 .content-minheight {
@@ -1449,33 +1474,6 @@ button {
   }
 }
 
-.body-wordfail {
-  .result-icon {
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-    margin-right: 8px;
-    vertical-align: middle;
-  }
-
-  .result-right-icon {
-    background: url('../img/right_icon.png') no-repeat;
-    background-size: cover;
-  }
-
-  .result-fail-icon {
-    background: url('../img/fail_icon.png') no-repeat;
-    background-size: cover;
-  }
-
-  .q-explain {
-    font-size: 14px;
-    color: #999999;
-    text-indent: 30px;
-    padding-top: 20px;
-  }
-}
-
 .mb-30 {
   margin-bottom: 30px;
 }
@@ -1704,7 +1702,6 @@ button {
   height: 64px;
   background: #fff;
   box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.05);
-  height: 64px;
   line-height: 64px;
   position: fixed;
   bottom: 0;
@@ -1732,6 +1729,36 @@ button {
     color: #666666;
     font-size: 20px;
     margin-left: 50px;
+  }
+
+  .cutdown {
+    float: right;
+    font-size: 30px;
+    color: #333333;
+    margin-left: 5px;
+  }
+
+  .cutdown-txt {
+    float: right;
+    font-size: 14px;
+    color: #999;
+    margin-left: 10px;
+  }
+
+  .cutdown-icon {
+    float: right;
+    width: 20px;
+    height: 20px;
+    background: url('../img/test_time.png') no-repeat;
+    background-size: cover;
+    position: relative;
+    top: 20px;
+  }
+}
+
+.posttest-body {
+  .wrap {
+    padding-bottom: 80px;
   }
 }
 
