--- a/src/css/main_wj.css
+++ b/src/css/main_wj.css
@@ -1113,6 +1113,31 @@ button:focus {
       color: #666;
     }
 
+.body-wordfail .result-icon {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    margin-right: 8px;
+    vertical-align: middle;
+  }
+
+.body-wordfail .result-right-icon {
+    background: url('../img/right_icon.png') no-repeat;
+    background-size: cover;
+  }
+
+.body-wordfail .result-fail-icon {
+    background: url('../img/fail_icon.png') no-repeat;
+    background-size: cover;
+  }
+
+.body-wordfail .q-explain {
+    font-size: 14px;
+    color: #999999;
+    text-indent: 30px;
+    padding-top: 20px;
+  }
+
 .content-minheight {
   min-height: 270px;
 }
@@ -1427,31 +1452,6 @@ button:focus {
     color: #FF4548;
 }
 
-.body-wordfail .result-icon {
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-    margin-right: 8px;
-    vertical-align: middle;
-  }
-
-.body-wordfail .result-right-icon {
-    background: url('../img/right_icon.png') no-repeat;
-    background-size: cover;
-  }
-
-.body-wordfail .result-fail-icon {
-    background: url('../img/fail_icon.png') no-repeat;
-    background-size: cover;
-  }
-
-.body-wordfail .q-explain {
-    font-size: 14px;
-    color: #999999;
-    text-indent: 30px;
-    padding-top: 20px;
-  }
-
 .mb-30 {
   margin-bottom: 30px;
 }
@@ -1676,7 +1676,6 @@ button:focus {
   background: #fff;
   -webkit-box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, .05);
           box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, .05);
-  height: 64px;
   line-height: 64px;
   position: fixed;
   bottom: 0;
@@ -1705,6 +1704,34 @@ button:focus {
     color: #666666;
     font-size: 20px;
     margin-left: 50px;
+  }
+
+.fixedfoot-wp .cutdown {
+    float: right;
+    font-size: 30px;
+    color: #333333;
+    margin-left: 5px;
+  }
+
+.fixedfoot-wp .cutdown-txt {
+    float: right;
+    font-size: 14px;
+    color: #999;
+    margin-left: 10px;
+  }
+
+.fixedfoot-wp .cutdown-icon {
+    float: right;
+    width: 20px;
+    height: 20px;
+    background: url('../img/test_time.png') no-repeat;
+    background-size: cover;
+    position: relative;
+    top: 20px;
+  }
+
+.posttest-body .wrap {
+    padding-bottom: 80px;
   }
 
 /* stylelint-enable */
