--- a/src/less/main_momo.less
+++ b/src/less/main_momo.less
@@ -7,6 +7,7 @@
 
 .comm-header {
   width: 100%;
+  min-width: 1200px;
   height: 80px;
   background: rgba(43, 56, 69, 1);
 }
@@ -775,7 +776,7 @@
   display: block;
 }
 
-.alphabet-wp{
+.alphabet-wp {
   margin-bottom: 24px;
 }
 
@@ -914,7 +915,7 @@
 .submit-b {
   width: 100%;
   height: 64px;
-  background:rgba(255, 255, 255, 1);
+  background: rgba(255, 255, 255, 1);
   box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.05);
 }
 
